feat: authentication token for apis
