# src/interfaces/routes/user-routes.ts
@@ -1,32 +1,32 @@
 import express from 'express';
 import {UserController} from '../restful/user-controller';
-import {
-	loginUserUseCase,
-	logoutUserUseCase,
-	changePasswordUseCase,
-	changeUsernameUseCase,
-} from '../dependencies';
+import {authenticateToken, authorizeRole} from "../../presentation/middleware/auth-middleware";
+
+import {changePasswordUseCase, changeUsernameUseCase, loginUserUseCase,} from '../dependencies';
+import {UserRole} from "../../domain/user-role";
 
 const router = express.Router();
 
 const userController = new UserController(
 	loginUserUseCase,
-	logoutUserUseCase,
 	changePasswordUseCase,
 	changeUsernameUseCase,
 );
 
 // Authentication
 router.post('/login', userController.login.bind(userController));
-router.post('/logout', userController.logout.bind(userController));
 
 // User management
 router.post(
 	'/change-password',
+    authenticateToken,
+    authorizeRole(UserRole.HOUSEHOLD),
 	userController.changePassword.bind(userController),
 );
 router.post(
 	'/change-username',
+    authenticateToken,
+    authorizeRole(UserRole.HOUSEHOLD),
 	userController.changeUsername.bind(userController),
 );
 
